# fireflies

./: .gitignore  COMPILE  ChangeLog  Make.include  Make.include.in  Makefile  README.md  add-xscreensaver  config.h  config.h.in  configure  configure.ac  fireflies.spec  fireflies.spec.in  fireflies.xml  installit  installit.in
debian/: .gitignore  changelog  control  copyright  files  fireflies.postinst  fireflies.postrm  rules
libgfx/: .gitignore  CHANGES.txt  README.txt  config.status  configure  configure.ac  configure.in  gfx-config
libgfx/doc/: index.html
libgfx/include/gfx/: arcball.h  baseball.h  config-vc.h  config.h  config.h.in  gfx.h  gui-mfc.h  gui.h  script.h
libgfx/src/: arcball.cxx  baseball.cxx  gui-mfc.cxx  gui.cxx  raster-png.cxx  raster.cxx  script.cxx
libgfx/vc7/: libgfx.sln
libgfx/vc7/libgfx/: libgfx.vcproj
libgfx/vc7/tglimg/: tglimg.vcproj
libgfx/vc7/tgui/: tgui.vcproj
libgfx/vc7/tscript/: tscript.vcproj
libgfx/vc7/tvec/: tvec.vcproj
lodepng/: Makefile
src/: .gitignore  Makefile  arrow.cc  arrow.h  bait.cc  bait.h  canvas_base.cc  canvas_base.h  canvas_glut.cc  canvas_glut.h  canvas_glx.cc  canvas_glx.h  canvas_sdl.cc  canvas_sdl.h  control.h  firefly.cc  firefly.h  gmon.out  gprof.txt  main.cc  main.h  modes.cc  modes.h  resource.h  resource.rc  resource.rc.french  scene.cc  scene.h  tags  tail.cc  tail.h  utils.cc  utils.h  vroot.h  winsaver.cc
web/: README.md  index.html  main.js  package-lock.json  package.json  pointers.js  regl-webgl2-compat.js  webgl2.js
win32/: Makefile  fireflies.nsi
